--- a/style.css
+++ b/style.css
@@ -199,4 +199,100 @@ body {
 }
 
 
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: rgb(88, 87, 87);
+  color: #fff;
+}
+
+.logo {
+  font-size: 30px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.hamburger-menu {
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 20px;
+  height: 15px;
+  cursor: pointer;
+}
+
+.bar {
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  transition: all 0.3s ease-in-out;
+}
+
+.nav-links {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-links li a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  margin: 0 10px;
+  transition: all 0.3s ease-in-out;
+}
+
+.nav-links li a:hover {
+  color: #777;
+}
+
+@media screen and (max-width: 768px) {
+  .navbar-container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .hamburger-menu {
+    display: flex;
+  }
+
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .nav-links li {
+    width: 100%;
+  }
+
+  .nav-links li a {
+    margin: 10px 0;
+  }
+
+  .active {
+    display: flex;
+  }
+
+  .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  .bar:first-child {
+    transform: translateY(7px) rotate(45deg);
+  }
+
+  .bar:last-child {
+    transform: translateY(-7px) rotate(-45deg);
+  }
+}
 
