--- a/style.css
+++ b/style.css
@@ -65,14 +65,13 @@
   font-style: italic;
 }
 
-
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
 }
 
 body {
@@ -90,14 +89,18 @@ body {
   align-items: center;
   flex-wrap: wrap;
   margin-top: 20px;
-
 }
 
 .container .cards {
   position: relative;
   width: 300px;
   height: 400px;
-  background: linear-gradient(rgb(189, 189, 189), rgb(189, 189, 189) 30%, rgb(170, 147, 255) 30%,rgb(194, 151, 255));
+  background: linear-gradient(
+    rgb(189, 189, 189),
+    rgb(189, 189, 189) 30%,
+    rgb(170, 147, 255) 30%,
+    rgb(194, 151, 255)
+  );
   margin: 10px;
   border-radius: 20px;
   overflow: hidden;
@@ -164,7 +167,6 @@ body {
 .container .cards .content .details h2 span {
   font-size: 0.8em;
   font-weight: 400;
-
 }
 
 .social_icons {
@@ -198,101 +200,64 @@ body {
   color: red;
 }
 
-
-.navbar {
+nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
-  padding: 20px;
-  background-color: rgb(88, 87, 87);
-  color: #fff;
-}
 
-.logo {
-  font-size: 30px;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  color: #fff;
-  text-decoration: none;
+  height: 50px;
+  padding: 0 20px;
+  background-color: rgb(80, 80, 80);
 }
 
 .hamburger-menu {
-  display: none;
+  display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  width: 20px;
-  height: 15px;
+  justify-content: space-around;
+  width: 30px;
+  height: 20px;
   cursor: pointer;
 }
 
-.bar {
+.hamburger-menu div {
   width: 100%;
-  height: 2px;
+  height: 3px;
   background-color: #fff;
-  transition: all 0.3s ease-in-out;
 }
 
 .nav-links {
-  display: flex;
-  justify-content: space-between;
+  display: none;
+  position: absolute;
+  top: 50px;
+  right: 20px;
   list-style: none;
-  margin: 0;
-  padding: 0;
+
+  padding: 20px;
 }
 
-.nav-links li a {
+.nav-links li {
+  margin-bottom: 10px;
+}
+
+.nav-links a {
   color: #fff;
   text-decoration: none;
-  font-size: 16px;
-  font-weight: 500;
-  letter-spacing: 1px;
-  margin: 0 10px;
-  transition: all 0.3s ease-in-out;
 }
 
-.nav-links li a:hover {
-  color: #777;
-}
-
-@media screen and (max-width: 768px) {
-  .navbar-container {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
+@media screen and (min-width: 768px) {
   .hamburger-menu {
-    display: flex;
+    display: none;
   }
 
   .nav-links {
-    display: none;
-    flex-direction: column;
-    width: 100%;
+    display: flex;
+    position: static;
+    justify-content: flex-end;
+    margin: 0;
+    padding: 0;
   }
 
   .nav-links li {
-    width: 100%;
-  }
-
-  .nav-links li a {
-    margin: 10px 0;
-  }
-
-  .active {
-    display: flex;
-  }
-
-  .bar:nth-child(2) {
-    opacity: 0;
-  }
-
-  .bar:first-child {
-    transform: translateY(7px) rotate(45deg);
-  }
-
-  .bar:last-child {
-    transform: translateY(-7px) rotate(-45deg);
+    margin: 0 10px;
   }
 }
-
