--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ nav {
   justify-content: flex-end;
   align-items: center;
 
-  height: 50px;
+  height: 80px;
   padding: 0 20px;
   background-color: rgb(80, 80, 80);
 }
@@ -242,7 +242,15 @@ nav {
 .nav-links a {
   color: #fff;
   text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s ease-in-out;
+  font-size: 1.2rem;
 }
+
+.nav-links a:hover {
+  color: #9059ff;
+}
+
 
 @media screen and (min-width: 768px) {
   .hamburger-menu {
